Configure Parallel execution for Cucumber Tests